# ColorPicky

./: Cargo copy.toml  Cargo.toml  README.md  build.rs  memory.x
.cargo/: config.toml
src/: blinkled.rs  colors.rs  config.rs  input.rs  main.rs  main_v1_stable.rs  ssd1283a.rs  tcs34725.rs  web.rs
