[package]
name = "colorpicky"
version = "0.1.0"
edition = "2021"

[dependencies]
# RP2350 HAL (embassy-rp with rp2350 feature)
embassy-rp = { version = "0.4", features = ["rp235xa", "critical-section-impl"] }

# Embedded HAL traits
embedded-hal = "1.0"

# Embedded graphics for drawing
embedded-graphics = "0.8"

# Cortex-M runtime and intrinsics
cortex-m = "0.7"
cortex-m-rt = "0.7"

# Debugging via RTT (for debugprobe)
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true
codegen-units = 1
debug = true        # Keep symbols for debugging

[profile.dev]
opt-level = 1       # Some optimization to fit in flash
debug = true