[package]
name = "colorpicky"
version = "0.1.0"
edition = "2021"

[dependencies]
# RP2350 HAL with WiFi support
embassy-rp = { git = "https://github.com/embassy-rs/embassy", features = ["rp235xa", "critical-section-impl", "time-driver"] }

# WiFi driver for Pico W (CYW43)
cyw43 = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "firmware-logs"] }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }

# Networking stack
embassy-net = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "tcp", "dhcpv4", "dns"] }

# Embedded HAL traits
embedded-hal = "1.0"
embedded-hal-async = "1.0"

# Embedded graphics for drawing
embedded-graphics = "0.8"

# Cortex-M runtime and intrinsics
cortex-m = "0.7"
cortex-m-rt = "0.7"

# Debugging via RTT (for debugprobe)
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
heapless = "0.8"
static_cell = "2"


[profile.release]
opt-level = "z"     # Optimize for size
lto = true
codegen-units = 1
debug = true        # Keep symbols for debugging

[profile.dev]
opt-level = 1       # Some optimization to fit in flash
debug = true